--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,5 @@
   "ClientId": "YOUR_CLIENT_ID",
   "ClientSecret": "YOUR_CLIENT_SECRET",
   "Scope": "YOUR_REQUESTED_SCOPES",
-  "RedirectUrl": "YOUR_REDIRECT_URL",
-  "CallBackUrl": "YOUR_CALLBACK_URL"
+  "RedirectUrl": "YOUR_REDIRECT_URL"
 }
